--- a/src/generator/AutoRest.Java.Azure/Templates/PagingMethodTemplate.cshtml
+++ b/src/generator/AutoRest.Java.Azure/Templates/PagingMethodTemplate.cshtml
@@ -35,8 +35,8 @@ else
 @: * @@return the {@@link @Model.ReturnTypeModel.ClientResponseType} object if successful.
 }
  */
-public ServiceResponse<@Model.ReturnTypeModel.GenericBodyClientTypeString> @(Model.Name)(@Model.MethodRequiredParameterDeclaration) throws @Model.ExceptionString {
-    ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString> response = @(Model.Name)SinglePageAsync(@Model.MethodRequiredParameterInvocation).toBlocking().single();
+public @Model.ReturnTypeModel.GenericBodyClientTypeStringWrapped @(Model.Name)(@Model.MethodRequiredParameterDeclaration) throws @Model.ExceptionString {
+    @Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped response = @(Model.Name)SinglePageAsync(@Model.MethodRequiredParameterInvocation).toBlocking().single();
     @Model.ReturnTypeModel.GenericBodyClientTypeString pagedList = new @(Model.ReturnTypeModel.GenericBodyClientTypeString)(response.getBody()) {
         @@Override
         public @Model.ReturnTypeModel.ServiceResponseGenericParameterString nextPage(String nextPageLink) throws RestException, IOException {
@@ -44,7 +44,7 @@ public ServiceResponse<@Model.ReturnTypeModel.GenericBodyClientTypeString> @(Mod
             return @(Model.GetPagingNextMethodInvocation(true))(@Model.NextMethodParameterInvocation(true)).toBlocking().single().getBody();
         }
     };
-    return new ServiceResponse<>(pagedList, response.getResponse());
+    return @(Model.ReturnTypeModel.ServiceResponseCreation(Model.ReturnTypeModel.GenericBodyClientTypeStringWrapped, "pagedList", "response"));
 }
 @EmptyLine
 /**
@@ -67,9 +67,9 @@ public ServiceResponse<@Model.ReturnTypeModel.GenericBodyClientTypeString> @(Mod
 public ServiceCall<@Model.ReturnTypeModel.ServiceCallGenericParameterString> @(Model.Name)Async(@Model.MethodRequiredParameterDeclarationWithCallback) {
     return AzureServiceCall.@(Model.ServiceCallFactoryMethod)(
         @(Model.Name)SinglePageAsync(@Model.MethodRequiredParameterInvocation),
-        new Func1<String, Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>>>() {
+        new Func1<String, Observable<@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped>>() {
             @@Override
-            public Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>> call(String nextPageLink) {
+            public Observable<@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped> call(String nextPageLink) {
                 @Model.PagingGroupedParameterTransformation(true)
                 return @(Model.GetPagingNextMethodInvocation(true))(@Model.NextMethodParameterInvocation(true));
             }
@@ -100,11 +100,11 @@ else
 @: * @@return the {@@link @Model.ReturnTypeModel.ClientResponseType} object if successful.
 }
  */
-public Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>> @(Model.Name)Async(@Model.MethodRequiredParameterDeclaration) {
+public Observable<@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped> @(Model.Name)Async(@Model.MethodRequiredParameterDeclaration) {
     return @(Model.Name)SinglePageAsync(@Model.MethodRequiredParameterInvocation)
-        .concatMap(new Func1<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>, Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>>>() {
+        .concatMap(new Func1<@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped, Observable<@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped>>() {
             @@Override
-            public Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>> call(ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString> page) {
+            public Observable<@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped> call(@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped page) {
                 String nextPageLink = page.getBody().getNextPageLink();
                 @Model.PagingGroupedParameterTransformation(true)
                 return @(Model.GetPagingNextMethodInvocation(true))(@Model.NextMethodParameterInvocation(true));
@@ -135,7 +135,7 @@ else
 @: * @@return the {@@link @Model.ReturnTypeModel.ClientResponseType} object if successful.
 }
  */
-public Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>> @(Model.Name)SinglePageAsync(@Model.MethodRequiredParameterDeclaration) {
+public Observable<@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped> @(Model.Name)SinglePageAsync(@Model.MethodRequiredParameterDeclaration) {
     @foreach (var param in Model.RequiredNullableParameters)
 {
 @:    if (@param.Name == null) {
@@ -166,12 +166,12 @@ public Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericP
 }
     @Model.ParameterConversion
     return service.@(Model.Name)(@Model.MethodRequiredParameterApiInvocation)
-        .flatMap(new Func1<Response<@Model.CallType>, Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>>>() {
+        .flatMap(new Func1<Response<@Model.CallType>, Observable<@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped>>() {
             @@Override
-            public Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>> call(Response<@Model.CallType> response) {
+            public Observable<@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped> call(Response<@Model.CallType> response) {
                 try {
-                    ServiceResponse<@Model.ReturnTypeModel.GenericBodyWireTypeString> result = @(Model.Name)Delegate(response);
-                    return Observable.just(new ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>(result.getBody(), result.getResponse()));
+                    @Model.ReturnTypeModel.GenericBodyWireTypeStringWrapped result = @(Model.Name)Delegate(response);
+                    return Observable.just(@(Model.ReturnTypeModel.ServiceResponseCreation(Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped, "result.getBody()", "result")));
                 } catch (Throwable t) {
                     return Observable.error(t);
                 }
@@ -208,8 +208,8 @@ else
 @: * @@return the {@@link @Model.ReturnTypeModel.ClientResponseType} object if successful.
 }
  */
-public ServiceResponse<@Model.ReturnTypeModel.GenericBodyClientTypeString> @(Model.Name)(@Model.MethodParameterDeclaration) throws @Model.ExceptionString {
-    ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString> response = @(Model.Name)SinglePageAsync(@Model.MethodParameterInvocation).toBlocking().single();
+public @Model.ReturnTypeModel.GenericBodyClientTypeStringWrapped @(Model.Name)(@Model.MethodParameterDeclaration) throws @Model.ExceptionString {
+    @Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped response = @(Model.Name)SinglePageAsync(@Model.MethodParameterInvocation).toBlocking().single();
     @Model.ReturnTypeModel.GenericBodyClientTypeString pagedList = new @(Model.ReturnTypeModel.GenericBodyClientTypeString)(response.getBody()) {
         @@Override
         public @Model.ReturnTypeModel.ServiceResponseGenericParameterString nextPage(String nextPageLink) throws RestException, IOException {
@@ -217,7 +217,7 @@ public ServiceResponse<@Model.ReturnTypeModel.GenericBodyClientTypeString> @(Mod
             return @(Model.GetPagingNextMethodInvocation(true))(@Model.NextMethodParameterInvocation()).toBlocking().single().getBody();
         }
     };
-    return new ServiceResponse<>(pagedList, response.getResponse());
+    return @(Model.ReturnTypeModel.ServiceResponseCreation(Model.ReturnTypeModel.GenericBodyClientTypeStringWrapped, "pagedList", "response"));
 }
 @EmptyLine
 /**
@@ -240,9 +240,9 @@ public ServiceResponse<@Model.ReturnTypeModel.GenericBodyClientTypeString> @(Mod
 public ServiceCall<@Model.ReturnTypeModel.ServiceCallGenericParameterString> @(Model.Name)Async(@Model.MethodParameterDeclarationWithCallback) {
     return AzureServiceCall.@(Model.ServiceCallFactoryMethod)(
         @(Model.Name)SinglePageAsync(@Model.MethodParameterInvocation),
-        new Func1<String, Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>>>() {
+        new Func1<String, Observable<@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped>>() {
             @@Override
-            public Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>> call(String nextPageLink) {
+            public Observable<@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped> call(String nextPageLink) {
                 @Model.PagingGroupedParameterTransformation()
                 return @(Model.GetPagingNextMethodInvocation(true))(@Model.NextMethodParameterInvocation());
             }
@@ -273,11 +273,11 @@ else
 @: * @@return the {@@link @Model.ReturnTypeModel.ClientResponseType} object if successful.
 }
  */
-public Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>> @(Model.Name)Async(@Model.MethodParameterDeclaration) {
+public Observable<@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped> @(Model.Name)Async(@Model.MethodParameterDeclaration) {
     return @(Model.Name)SinglePageAsync(@Model.MethodParameterInvocation)
-        .concatMap(new Func1<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>, Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>>>() {
+        .concatMap(new Func1<@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped, Observable<@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped>>() {
             @@Override
-            public Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>> call(ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString> page) {
+            public Observable<@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped> call(@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped page) {
                 String nextPageLink = page.getBody().getNextPageLink();
                 @Model.PagingGroupedParameterTransformation()
                 return @(Model.GetPagingNextMethodInvocation(true))(@Model.NextMethodParameterInvocation());
@@ -297,6 +297,7 @@ public Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericP
  *
 @foreach (var param in Model.LocalParameters.Where(p => !p.IsConstant))
 {
+    @Model.ReturnTypeModel.GenericBodyWireTypeStringWrapped
 @: * @@param @param.Name @((param.Documentation.IsNullOrEmpty() ? "the " + param.Type.ToString() + " value" : param.Documentation).EscapeXmlComment().Trim())
 }
 @if (Model.ReturnType.Body != null)
@@ -308,7 +309,7 @@ else
 @: * @@return the {@@link @Model.ReturnTypeModel.ClientResponseType} object if successful.
 }
  */
-public Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>> @(Model.Name)SinglePageAsync(@Model.MethodParameterDeclaration) {
+public Observable<@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped> @(Model.Name)SinglePageAsync(@Model.MethodParameterDeclaration) {
     @foreach (var param in Model.RequiredNullableParameters)
 {
 @:    if (@param.Name == null) {
@@ -334,12 +335,12 @@ public Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericP
 }
     @Model.ParameterConversion
     return service.@(Model.Name)(@Model.MethodParameterApiInvocation)
-        .flatMap(new Func1<Response<@Model.CallType>, Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>>>() {
+        .flatMap(new Func1<Response<@Model.CallType>, Observable<@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped>>() {
             @@Override
-            public Observable<ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>> call(Response<@Model.CallType> response) {
+            public Observable<@Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped> call(Response<@Model.CallType> response) {
                 try {
-                    ServiceResponse<@Model.ReturnTypeModel.GenericBodyWireTypeString> result = @(Model.Name)Delegate(response);
-                    return Observable.just(new ServiceResponse<@Model.ReturnTypeModel.ServiceResponseGenericParameterString>(result.getBody(), result.getResponse()));
+                    @Model.ReturnTypeModel.GenericBodyWireTypeStringWrapped result = @(Model.Name)Delegate(response);
+                    return Observable.just(@(Model.ReturnTypeModel.ServiceResponseCreation(Model.ReturnTypeModel.ServiceResponseGenericParameterStringWrapped, "result.getBody()", "result")));
                 } catch (Throwable t) {
                     return Observable.error(t);
                 }
